<resources>
    <string name="app_name">Music App</string>
    <string name="recent_items">Recently Played</string>
    <string name="now_playing">Now Playing</string>
    <string name="now_play_desc">Shows the details of the song being played and also the player control buttons.</string>
    <string name="play_button">Play</string>
    <string name="prev_button">Previous Track</string>
    <string name="next_button">Next Track</string>
    <string name="shuffle_button">Shuffle</string>
    <string name="repeat_button">Repeat</string>
    <string name="song_details">To Song Details Menu</string>
    <string name="main_screen">To Home Screen</string>
    <string name="home_screen">Home Screen</string>
    <string name="library">Music Library</string>
    <string name="playlists">My Playlists</string>
    <string name="artists">Artists</string>
    <string name="album">Albums</string>
    <string name="all_songs">All Songs</string>
    <string name="collections">Latest Collections</string>
    <string name="settings">Settings</string>
    <string name="recent_desc">Displays a list of recently played songs. From this screen we can navigate either to the \"Now Playing\" screen or back to the home screen.</string>
    <string name="latest_desc">Displays a list of latest collections of songs and provides option for purchase</string>
    <string name="lib_desc">Displays the categories of the songs based on the artists, albums, playlists or all songs</string>
    <string name="settings_desc">Displays a list of options to control the music player settings.</string>
    <string name="main_desc">Tap on the desired option to view the corresponding activity</string>
    <string name="buy">Buy</string>
    <string name="payment_desc">Payment is made using the IInAppBillingService.\n\nTO_DO : \n\nCopy the corresponding aidl file\nCreate the helper classes\nSet the billing permission in the manifest file\nCreating instance for the helper classes in the onCreate method of this activity\nWhen the \"Buy\" button is clicked it will initiate the purchase\nImplement the onActivityResult Method and the Purchase Finished Listener\nAfer the purchase is completed, release the labHelper instances.</string>
</resources>
