<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.home.mymusicplayer.NowPlayingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/now_playing"
            android:textColor="@color/colorOptions"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/now_play_desc"
            android:textColor="@color/colorOptions"
            android:textSize="22sp"
            android:textStyle="italic" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp">

            <ImageButton
                android:id="@+id/repeat"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/repeat_button"
                android:scaleType="centerCrop"
                android:src="@drawable/repeat_button" />

            <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@id/next"
                android:contentDescription="@string/shuffle_button"
                android:scaleType="centerCrop"
                android:src="@drawable/shuffle_button" />

            <ImageButton
                android:id="@+id/prev"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@id/repeat"
                android:contentDescription="@string/prev_button"
                android:scaleType="centerCrop"
                android:src="@drawable/prev_button" />

            <ImageButton
                android:id="@+id/play"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@id/prev"
                android:contentDescription="@string/play_button"
                android:scaleType="centerCrop"
                android:src="@drawable/play_button" />

            <ImageButton
                android:id="@+id/next"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_toRightOf="@id/play"
                android:contentDescription="@string/next_button"
                android:scaleType="centerCrop"
                android:src="@drawable/next_button" />
        </RelativeLayout>

        <Button
            android:id="@+id/song_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorButton"
            android:padding="10dp"
            android:text="@string/song_details" />

        <Button
            android:id="@+id/main_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@color/colorButton"
            android:padding="10dp"
            android:text="@string/main_screen" />

    </LinearLayout>

</ScrollView>