<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.home.mymusicplayer.LibraryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/library"
            android:textColor="@color/colorOptions"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/lib_desc"
            android:textColor="@color/colorOptions"
            android:textSize="22sp"
            android:textStyle="italic" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/bgColorOptions"
            android:padding="10dp"
            android:text="@string/playlists"
            android:textColor="@color/colorOptions"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/bgColorOptions"
            android:padding="10dp"
            android:text="@string/album"
            android:textColor="@color/colorOptions"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/bgColorOptions"
            android:padding="10dp"
            android:text="@string/artists"
            android:textColor="@color/colorOptions"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/bgColorOptions"
            android:padding="10dp"
            android:text="@string/all_songs"
            android:textColor="@color/colorOptions"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/now_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@color/colorButton"
            android:padding="10dp"
            android:text="@string/now_playing" />

    </LinearLayout>

</ScrollView>