<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.home.mymusicplayer.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/home_screen"
            android:textColor="@color/colorOptions"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/main_desc"
            android:textColor="@color/colorOptions"
            android:textSize="22sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/recent_option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/bgColorOptions"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/recent_items"
            android:textColor="@color/colorOptions"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/library"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/bgColorOptions"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/library"
            android:textColor="@color/colorOptions"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/bgColorOptions"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/collections"
            android:textColor="@color/colorOptions"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/bgColorOptions"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/settings"
            android:textColor="@color/colorOptions"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/now_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@color/colorButton"
            android:padding="10dp"
            android:text="@string/now_playing" />


    </LinearLayout>
</ScrollView>
