<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgColorLayout"
    tools:context="com.example.home.mymusicplayer.LatestActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/latest_desc"
            android:textColor="@color/colorOptions"
            android:textSize="22sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/buy"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/bgColorOptions"
            android:padding="10dp"
            android:text="@string/buy"
            android:textColor="@color/colorOptions"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/payment_desc"
            android:textColor="@color/colorOptions"
            android:textSize="22sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/now_playing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:background="@color/colorButton"
            android:padding="10dp"
            android:text="@string/now_playing" />

    </LinearLayout>

</ScrollView>